# rules_springbootjar

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  release_maker.sh
example/app/: BUILD.bazel
example/app/src/main/java/com/bazel/springbootjar/examples/app/: App.java
example/app/src/main/resources/: application.properties
example/indirectLib/: BUILD.bazel
example/indirectLib/src/main/resources/: additional.properties
example/lib/: BUILD.bazel
example/lib/src/main/java/com/bazel/springbootjar/examples/lib/: LibClass.java
examples/springbootapp/: BUILD.bazel
examples/springbootapp/src/main/java/com/bazel/springbootjar/examples/app/: App.java
springbootjar/: BUILD.bazel  springbootjar.bzl  springbootjar.py
springbootjar/tests/: springbootjar_test.py
