load("@rules_python//python:defs.bzl", "py_binary", "py_test")

exports_files([
    "springbootjar.bzl",
    "springbootjar.py",
])


py_binary(
    name = "springbootjar",
    srcs = [
        "springbootjar.py",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "springbootjar_test",
    size = "small",
    srcs = [
        "springbootjar.py",
        "tests/springbootjar_test.py",
    ],
    imports = ["."],
)
