load("//springbootjar:springbootjar.bzl", "springbootjar")
springboot_deps = [
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_web",
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_actuator_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_starter_web",
]


java_library(
    name = "example_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
#    resources = glob(["src/main/resources/**"]),
    deps = springboot_deps,
)

springbootjar(
    name = "sampleapp",
    boot_app_class = "com.bazel.springbootjar.examples.app.App",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":example_lib",

    deps = ["@maven//:org_springframework_boot_spring_boot_loader"],
)

